adding java lambda test

--- a/package.json
+++ b/package.json
@@ -1,22 +1,26 @@
 {
-  "name": "tim",
+  "name": "gateway",
   "version": "0.1.0",
   "bin": {
-    "tim": "bin/tim.js"
+    "tim": "bin/gateway.js"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "npx ts-node scripts/java.ts",
     "watch": "tsc -w",
     "test": "jest",
-    "cdk": "cdk"
+    "cdk": "cdk",
+    "deploy": "cdk deploy --require-approval never"
   },
   "devDependencies": {
     "@aws-cdk/assert": "1.90.1",
+    "@aws-cdk/aws-apigateway": "^1.92.0",
+    "@aws-cdk/aws-lambda": "^1.92.0",
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
+    "aws-cdk": "1.90.1",
+    "child_process": "^1.0.2",
     "jest": "^26.4.2",
     "ts-jest": "^26.2.0",
-    "aws-cdk": "1.90.1",
     "ts-node": "^9.0.0",
     "typescript": "~3.9.7"
   },
